# 3d-Viewer

./: CMakeLists.txt  Makefile  README.md
shaders/: compile.bat  shader.vert
src/: main.cpp
src/core/: Application.cpp  Application.hpp  BasicTriangleStrategy.hpp  BufferManager.cpp  BufferManager.hpp  CommandManager.cpp  CommandManager.hpp  Constants.cpp  Constants.hpp  DeviceManager.cpp  DeviceManager.hpp  InstanceManager.cpp  InstanceManager.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineManager.cpp  PipelineManager.hpp  PipelineStrategy.hpp  SurfaceManager.cpp  SurfaceManager.hpp  SwapChainManager.cpp  SwapChainManager.hpp  TextureManager.cpp  TextureManager.hpp  Vertex.cpp  Vertex.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanTypes.hpp  VulkanUtils.hpp  WindowManager.cpp  WindowManager.hpp
tests/: CMakeLists.txt  VulkanDeleterTest.cpp  VulkanUtilsTest.cpp
Презентация/: 3d-viewer.pptx
